<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">东海网dev</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_user">个人中心</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_web_view">@string/app_name</string>

    <!--应用初始化对话框-->
    <string name="init_dialog_hint">初始化失败，请检查网络</string>
    <string name="init_dialog_positive">重试</string>
    <string name="init_dialog_negative">退出</string>
    <!--应用初始化对话框-->

    <!--更新提醒对话框-->
    <string name="dialog_upgrade_negative">忽略</string>
    <string name="dialog_upgrade_positive">升级</string>
    <string name="dialog_upgrade_toast">后台正在下载更新包...</string>
    <!--更新提醒对话框-->


    <!--底部刷新组件提示文本-->
    <string name="refresh_footer_default"></string>
    <string name="refresh_footer_refreshing">正在加载...</string>
    <string name="refresh_footer_no_more">没有更多内容了</string>
    <string name="refresh_footer_clickable">点击加载更多</string>
    <string name="refresh_footer_auto"></string>
    <!--底部刷新组件提示文本-->

    <!--内容更新提示组件文本-->
    <string name="prompt_bar_refresh_success">更新成功</string>
    <string name="prompt_bar_refresh_fail">更新失败</string>
    <string name="prompt_bar_append_success">加载成功</string>
    <string name="prompt_bar_append_fail">加载失败</string>
    <!--内容更新提示组件文本-->


    <!--广播错误提示-->
    <string name="fm_error_io">网络异常，请重试</string>
    <string name="fm_error_time_out">网络不佳，请重试</string>
    <string name="fm_error_unsupported">不支持该媒体格式</string>
    <string name="fm_error_unknown">未知错误</string>
    <!--广播错误提示-->

    <!--空视图组件文本-->
    <string name="empty_view_fail">加载失败，点击重试</string>
    <string name="empty_view_hint">正在更新</string>
    <string name="empty_view_idle">暂无内容</string>
    <string name="empty_view_active">暂无内容</string>
    <!--空视图组件文本-->

    <!--网页重试按钮提示-->
    <string name="button_web_retry">重试</string>
    <!--网页重试按钮提示-->

    <!--网页错误提示-->
    <string name="error_message_io">无法访问，请检查网络</string>
    <string name="error_message_file_not_found">抱歉，您访问的页面不存在</string>
    <string name="error_message_unknown">未知错误，页面无法显示</string>
    <string name="error_message_connect">网络不佳，请重试</string>
    <!--网页错误提示-->

    <!--app安装更新Dialog-->
    <string name="title_dialog_app_install">已准备好新版本的安装文件，是否安装</string>
    <string name="title_dialog_app_download">检测到新版本，是否下载</string>
    <!--app安装更新Dialog-->


    <!--登录页面-->
    <string name="hint_login_user_name">用户名/邮箱</string>
    <string name="hint_login_password">密码</string>
    <string name="login">登录</string>
    <string name="link_register">注册</string>
    <!--登录页面-->

    <!--用户中心-->
    <string name="text_my_fact">我的爆料</string>
    <string name="text_my_favorite">我的收藏</string>
    <string name="text_my_comment">我的评论</string>
    <string name="button_log_out">登出</string>
    <string name="button_send_fact">我要爆料</string>
    <!--用户中心-->

    <!--注册-->
    <string name="hint_register_user_name">用户名</string>
    <string name="hint_register_password">密码</string>
    <string name="hint_register_repeat_password">再次输入密码</string>
    <string name="hint_register_email">邮箱</string>
    <string name="button_register">注册</string>
    <string name="button_get_sms_code">免费获取短信</string>
    <string name="hint_register_mobile">手机号码</string>
    <string name="hint_register_sms_code">短信验证码</string>
    <string name="hint_sms_resend">秒后重发</string>
    <string name="message_wrong_phone_number">手机号码有误</string>
    <string name="message_wrong_user_name">用户名有误</string>
    <string name="message_wrong_password">密码有误</string>
    <string name="message_wrong_passwrod_different">密码不一致</string>
    <string name="message_wrong_email">请填写有效的邮箱</string>
    <string name="message_wrong_sms_code">验证码有误</string>
    <!--注册-->



    <!--导读fragment标题-->
    <string name="title_section1">新闻</string>
    <string name="title_section2">视频</string>
    <string name="title_section3">点播</string>
    <string name="title_section4">广播</string>
    <string name="title_section5">直播</string>
    <string name="title_section6">微电影</string>
    <!--导读fragment标题-->

    <!--ProcessingDialog-->
    <string name="hint_dialog_processing">正在处理...</string>
    <!--ProcessingDialog-->



    <string name="title_fragment_news">新闻</string>
    <string name="title_activity_program_detail">ProgramDetailActivity</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="title_activity_tvlist">电视节目</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_fact">FactActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="title_activity_send_fact">SendFactActivity</string>
    <string name="title_activity_fact_detail">FactDetailActivity</string>

</resources>
