<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.dhtv.mobile.activity.LoginActivity">

   <android.support.v7.widget.CardView
       android:layout_height="wrap_content"
       android:layout_width="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <cn.dhtv.android.view.RatioImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/user_name"
                   android:adjustViewBounds="true"
                   app:ratio="1"
                   android:scaleType="fitCenter"
                   />
               <EditText
                   android:id="@+id/user_name"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:hint="@string/hint_login_user_name"
                    />
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <cn.dhtv.android.view.RatioImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   app:ratio="1"
                   android:src="@drawable/lock"
                   android:adjustViewBounds="true"
                   />
               <EditText
                   android:id="@+id/password"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:inputType="textPassword"
                   android:hint="@string/hint_login_password"
                   android:ems="10"
                   />

           </LinearLayout>
       </LinearLayout>

   </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/button_login_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/text_size_title"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title_subtitle"
        android:text="@string/link_register"
        />



</LinearLayout>
